--- a/src/pages/search/Search.module.css
+++ b/src/pages/search/Search.module.css
@@ -48,21 +48,61 @@
   color: rgb(179, 179, 179);
 }
 
+.disableLink {
+  pointer-events: none;
+  color: gray;
+  transition: color 0.3s linear;
+}
+
 /* Image grid */
 .libraryGrid {
   display: flex;
   flex-wrap: wrap;
+
   width: 100%;
   max-height: fit-content;
-  gap: 2px;
+  gap: 3px;
 }
 
-.libraryGrid img {
-  width: calc(100% / 3 - 2px);
-  border-radius: 7px;
-  object-fit: cover;
+.libraryGrid > .imagesContainer {
+  position: relative;
+  width: calc(100% / 3 - 3px);
   aspect-ratio: 1;
-  transition: all 1s ease;
+  overflow: hidden;
+  border-radius: 7px;
+  display: flex;
+  align-items: flex-end; /* Helps if you use flex-based captions */
+}
+
+.libraryGrid > .imagesContainer > img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  top: 0;
+  left: 0;
+}
+
+.libraryGrid > .imagesContainer > .caption {
+  background: var(--popup-bground);
+  backdrop-filter: blur(20px) brightness(1);
+  -webkit-backdrop-filter: blur(20px) brightness(1);
+  padding: 10px 14px;
+  width: 100%;
+
+  text-overflow: ellipsis;
+
+  z-index: 1;
+  color: white;
+  font-size: 14px;
+
+  opacity: 0;
+
+  transition: opacity 0.5s ease;
+}
+
+.imagesContainer:hover > .caption {
+  opacity: 1;
 }
 
 .notfoundSearch {
@@ -70,7 +110,7 @@
   height: 200px;
 
   display: flex;
-  justify-content: center;
+  justify-content: start;
   flex-direction: column;
   align-items: center;
 }
