--- a/src/pages/upload/Upload.module.css
+++ b/src/pages/upload/Upload.module.css
@@ -16,6 +16,7 @@
 
   color: var(--text-color);
 
+  pointer-events: auto;
   user-select: none;
   -webkit-user-select: none;
 
@@ -76,11 +77,11 @@
   font-weight: 600;
 }
 
-@keyframes zoomIn {
+/* @keyframes zoomIn {
   from {
     scale: 0;
   }
   to {
     scale: 1;
   }
-}
+} */
